overflow-fix

--- a/style.css
+++ b/style.css
@@ -843,7 +843,7 @@ nav ul li span:nth-child(4) {
     overflow-x: hidden;
   }
   .imgscollor{
-    overflow-x: hidden;
+    overflow: hidden;
     height: 50vh;
     width:100% ;
     /* background-color: rgb(17, 188, 250); */
